Fixed Vanta js not rendering on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,13 +45,3 @@ input, textarea {
 body {
   overflow-x: hidden;
 }
-
-@media screen and (max-width: 420px) {
-  html, body {
-    overflow-x: hidden;
-  }
-
-  body {
-    width: 100%;
-  }
-}
